fixed spacing

--- a/global-style.css
+++ b/global-style.css
@@ -72,7 +72,7 @@ body {
     height: 100%;
     
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: .1fr .3fr 1.8fr .1fr .2fr .1fr .2fr;
+    grid-template-rows: .4fr .2fr 1.5fr .1fr .1fr .2fr .2fr;
     row-gap: .2rem;
     grid-template-areas: 
     ". . . . ."
